--- a/Shared/VisualizerControl.xaml
+++ b/Shared/VisualizerControl.xaml
@@ -174,6 +174,8 @@
                     </TextBlock.Foreground>
                     <TextBlock.ContextMenu>
                         <ContextMenu>
+                            <MenuItem Header="Set as root" Click="SetRootNode" />
+                            <MenuItem Header="Open as root in new window" Click="OpenRootNewWindow" />
                             <MenuItem Header="Expand recursively" Click="ExpandAll" />
                             <MenuItem Header="Collapse recursively" Click="CollapseAll" />
                         </ContextMenu>
